--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebAR 3D Viewer</title>
+  <title>WebAR 3D Viewer（WebXR Only）</title>
 
-  <!-- 載入 model-viewer（Google 官方 Web Component） -->
+  <!-- model-viewer 元件 -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 
@@ -98,17 +98,17 @@
 <body>
   <div class="wrapper">
     <div class="card">
-      <h1>AR 3D 展示</h1>
-      <p class="subtitle">請使用手機開啟此頁面，點選畫面中的 <strong>AR</strong> 圖示。</p>
+      <h1>AR 3D 展示（WebXR 模式）</h1>
+      <p class="subtitle">請用支援 AR 的手機開啟此頁面，點選畫面中的 <strong>AR</strong> 圖示。</p>
 
-      <!-- 🔧 將你的 GLB / USDZ 路徑填進來 -->
+      <!-- 這裡換成你的 Luma GLB / 對應的 USDZ -->
       <model-viewer
         id="arModel"
-        src="models/Snail_Garden_Sculpture.glb"
-        ios-src="models/Snail_Garden_Sculpture.usdz"
+        src="models/your-model.glb"
+        ios-src="models/your-model.usdz"
         alt="3D 模型"
         ar
-        ar-modes="scene-viewer quick-look webxr"
+        ar-modes="webxr quick-look"
         camera-controls
         auto-rotate
         autoplay
@@ -122,45 +122,55 @@
 
       <div class="hint">
         📌 <strong>基本操作：</strong><br />
-        ・用一根手指滑動：旋轉模型。<br />
-        ・用兩指張合：放大縮小模型。<br />
+        ・單指拖曳：旋轉模型。<br />
+        ・兩指張合：放大 / 縮小模型。<br />
         ・若沒有看到 <strong>AR</strong> 按鈕，代表目前裝置或瀏覽器可能不支援 AR，只能以 3D 模式觀看。
       </div>
 
       <div class="footer">
-        WebAR Demo • GitHub Pages
+        WebAR Demo • WebXR Only
       </div>
     </div>
   </div>
 
   <script>
-    // 簡單偵測裝置類型，給不同說明文字（網址/程式都同一份）
     (function () {
       var ua = navigator.userAgent || navigator.vendor || window.opera;
       var isAndroid = /Android/i.test(ua);
       var isIOS = /iPhone|iPad|iPod/i.test(ua);
+      var mv = document.getElementById('arModel');
       var hintEl = document.getElementById('deviceHint');
 
-      if (!hintEl) return;
+      if (!mv || !hintEl) return;
 
       if (isAndroid) {
+        // ✅ Android：只用 WebXR，不用 Scene Viewer（避免「無法載入物件」）
+        mv.setAttribute('ar-modes', 'webxr');
+
         hintEl.innerHTML = [
           '<span class="tag">Android</span>',
-          '・請使用 Chrome 瀏覽器開啟本頁面。<br />',
-          '・畫面右下角會顯示 <strong>AR</strong> 或立體圖示，點擊後即可開啟 Google AR (Scene Viewer) 在環境中放置模型。'
+          '・請使用 <strong>最新版 Chrome</strong> 開啟本頁面。<br />',
+          '・手機需支援 <strong>ARCore / Google Play Services for AR</strong> 才能進入 AR 模式。<br />',
+          '・若點 AR 沒反應，可能是此裝置不支援 WebXR AR，仍可用 3D 模式觀看模型。'
         ].join('');
       } else if (isIOS) {
+        // 🍎 iOS：Quick Look + WebXR
+        mv.setAttribute('ar-modes', 'quick-look webxr');
+
         hintEl.innerHTML = [
           '<span class="tag">iOS</span>',
-          '・建議使用 Safari 開啟本頁面。<br />',
-          '・出現 <strong>AR</strong> 圖示時點擊，可透過「Quick Look」在相機畫面中放置 3D 模型。<br />',
-          '・若點擊後只顯示 3D，而沒有進入 AR，請確認是否已提供對應的 <code>.usdz</code> 檔案。'
+          '・建議使用 <strong>Safari</strong> 開啟本頁面。<br />',
+          '・點選 <strong>AR</strong> 圖示，可透過「Quick Look」在相機畫面中放置 3D 模型。<br />',
+          '・若只看到 3D 而無法進 AR，請確認是否有提供對應的 <code>.usdz</code> 檔案。'
         ].join('');
       } else {
+        // 💻 其他裝置：只看 3D
+        mv.removeAttribute('ar');        // 不顯示 AR 按鈕
+        mv.setAttribute('ar-modes', '');
+
         hintEl.innerHTML = [
           '<span class="tag">桌機 / 其他裝置</span>',
-          '・目前裝置可能不支援原生 AR，建議用手機掃描 QR Code 再次開啟本頁面。<br />',
-          '・你仍可在此以滑鼠拖曳的方式查看 3D 模型。'
+          '・目前裝置可能不支援原生 AR，建議使用支援 AR 的手機掃描 QR Code 再次開啟本頁面。'
         ].join('');
       }
     })();
