--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       <!-- 🔧 這裡換成你的 Luma GLB & USDZ -->
       <model-viewer
         id="arModel"
-        src="models/your-model.glb"
-        ios-src="models/your-model.usdz"
+        src="models/Snail_Garden_Sculpture.glb"
+        ios-src="models/Snail_Garden_Sculpture.usdz"
         alt="3D 模型"
         ar
         ar-modes="webxr quick-look"
