--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <!-- 🔧 將你的 GLB / USDZ 路徑填進來 -->
       <model-viewer
         id="arModel"
-        src="models/your-model.glb"
-        ios-src="models/your-model.usdz"
+        src="models/snail.glb"
+        ios-src="models/snail.usdz"
         alt="3D 模型"
         ar
         ar-modes="scene-viewer quick-look webxr"
