--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
 
       <div class="footer">
-        WebAR Demo • GitHub Pages
+        WebAR • Snail
       </div>
     </div>
   </div>
